about & contact styling

--- a/src/app/contact/contact/contact.component.html
+++ b/src/app/contact/contact/contact.component.html
@@ -1,5 +1,5 @@
 <!--================Categories Banner Area =================-->
-<section class="solid_banner_area contactusbg">
+<section class="solid_banner_area contactusbg mx-auto">
     <div class="container">
         <div class="solid_banner_inner">
             <h3>Contact us</h3>
@@ -75,4 +75,3 @@
         </div>
     </div>
 </section>
-<app-footer></app-footer>
