--- a/src/app/about/about/about.component.html
+++ b/src/app/about/about/about.component.html
@@ -1,5 +1,5 @@
 <!--================Main Content Area =================-->
-<section class="solid_banner_area aboutusbg">
+<section class="solid_banner_area aboutusbg mx-auto" >
     <div class="container">
         <div class="solid_banner_inner">
             <h3>About us</h3>
@@ -72,7 +72,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <img src="img/aboutus.png" class="img-responsive" />
+                <img src="assets/img/aboutus.png" class="img-responsive"  alt="about-us"/>
             </div>
             <div class="col-sm-6">
                 <h2>About Gift shop</h2>
@@ -94,30 +94,30 @@
 <!--================World Wide Service Area =================-->
 <section class="world_service">
     <div class="container">
-        <div class="world_service_inner">
+        <div class="world_service_inner" style="min-width: 91%">
             <div class="row">
                 <div class="col-lg-3">
                     <div class="world_service_item">
                         <h4>
-                            <img src="img/icon/world-icon-1.png" alt="" />Special Service
+                            <img src="assets/img/icon/world-icon-1.png" alt="" />Special Service
                         </h4>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="world_service_item">
                         <h4>
-                            <img src="img/icon/world-icon-2.png" alt="" />247 Help Center
+                            <img src="assets/img/icon/world-icon-2.png" alt="" />247 Help Center
                         </h4>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="world_service_item">
-                        <h4><img src="img/icon/world-icon-3.png" alt="" />Safe Payment</h4>
+                        <h4><img src="assets/img/icon/world-icon-3.png" alt="" />Safe Payment</h4>
                     </div>
                 </div>
                 <div class="col-lg-3">
                     <div class="world_service_item">
-                        <h4><img src="img/icon/world-icon-4.png" alt="" />Home Shopping</h4>
+                        <h4><img src="assets/img/icon/world-icon-4.png" alt="" />Home Shopping</h4>
                     </div>
                 </div>
             </div>
