--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,112 +1,97 @@
-<div class="home_box">
+<div class="home_sidebar">
+  <div class="home_box">
     <!--================Menu Area =================-->
     <header class="shop_header_area carousel_menu_area">
-        <div class="carousel_top_header black_top_header row m0">
-            <div class="container">
-                <div class="carousel_top_h_inner">
-                    <div class="float-md-left">
-                        <div class="top_header_left">
-                            <div class="selector">
-                                <select class="language_drop" name="countries" id="countries" style="width: 300px">
-                  <option
-                    value="yt"
-                    data-image="./assets/img/icon/flag-1.png"
-                    data-imagecss="flag yt"
-                    data-title="English"
-                  >
-                    English
-                  </option>
-                  <option
-                    value="yu"
-                    data-image="./assets/img/icon/flag-1.png"
-                    data-imagecss="flag yu"
-                    data-title="Bangladesh"
-                  >
-                    Bangla
-                  </option>
-                  <option
-                    value="yt"
-                    data-image="./assets/img/icon/flag-1.png"
-                    data-imagecss="flag yt"
-                    data-title="English"
-                  >
-                    English
-                  </option>
-                  <option
-                    value="yu"
-                    data-image="./assets/img/icon/flag-1.png"
-                    data-imagecss="flag yu"
-                    data-title="Bangladesh"
-                  >
-                    Bangla
-                  </option>
-                </select>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="float-md-right">
-                        <ul class="account_list">
-                            <li><a href="#">My Account</a></li>
-                            <!-- <li><a href="#">Wish List (0)</a></li> -->
-                            <li><a href="#">Shopping Cart</a></li>
-                            <li><a href="#">Checkout</a></li>
-                        </ul>
-                    </div>
+      <div class="carousel_top_header black_top_header row m0">
+        <div class="container">
+          <div class="carousel_top_h_inner">
+            <div class="float-md-left">
+              <div class="top_header_left">
+                <div class="selector">
+                  <select class="language_drop" name="countries" id="countries" style="width: 300px">
+                    <option value="yt" data-image="./assets/img/icon/flag-1.png" data-imagecss="flag yt"
+                      data-title="English">
+                      English
+                    </option>
+                    <option value="yu" data-image="./assets/img/icon/flag-1.png" data-imagecss="flag yu"
+                      data-title="Bangladesh">
+                      Bangla
+                    </option>
+                    <option value="yt" data-image="./assets/img/icon/flag-1.png" data-imagecss="flag yt"
+                      data-title="English">
+                      English
+                    </option>
+                    <option value="yu" data-image="./assets/img/icon/flag-1.png" data-imagecss="flag yu"
+                      data-title="Bangladesh">
+                      Bangla
+                    </option>
+                  </select>
                 </div>
+              </div>
             </div>
+            <div class="float-md-right">
+              <ul class="account_list">
+                <li><a href="#">My Account</a></li>
+                <!-- <li><a href="#">Wish List (0)</a></li> -->
+                <li><a href="#">Shopping Cart</a></li>
+                <li><a href="#">Checkout</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <div class="carousel_menu_inner">
-            <div class="container">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" routerLink="/home"><img src="./assets/img/logo-1.png" alt="" /></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+      </div>
+      <div class="carousel_menu_inner">
+        <div class="container">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" routerLink="/home"><img src="./assets/img/logo-1.png" alt="" /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" routerLink="/home">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" routerLink="/about-us">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">How to use ? </a>
-                            </li>
-                            <li class="nav-item dropdown submenu">
-                                <a class="nav-link dropdown-toggle" href="events.php" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Events <i class="fa fa-angle-down" aria-hidden="true"></i>
-                </a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="public-events.php">Public events</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="private-events.php"
-                      >Private events</a
-                    >
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="/contact-us">Contact</a>
-                                    </li>
-                                </ul>
-                                <ul class="navbar-nav justify-content-end">
-                                    <li class="user_icon">
-                                        <a routerLink="/auth"><i class="icon-user icons"></i></a>
-                                    </li>
-                                    <li class="cart_cart">
-                                        <a href="#"><i class="icon-handbag icons"></i></a>
-                                    </li>
-                                </ul>
-                    </div>
-                </nav>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" routerLink="/home">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/about-us">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">How to use ? </a>
+                </li>
+                <li class="nav-item dropdown submenu">
+                  <a class="nav-link dropdown-toggle" href="events.php" role="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    Events <i class="fa fa-angle-down" aria-hidden="true"></i>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li class="nav-item">
+                      <a class="nav-link" href="public-events.php">Public events</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="private-events.php">Private events</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/contact-us">Contact</a>
+                </li>
+              </ul>
+              <ul class="navbar-nav justify-content-end">
+                <li class="user_icon">
+                  <a routerLink="/auth"><i class="icon-user icons"></i></a>
+                </li>
+                <li class="cart_cart">
+                  <a href="#"><i class="icon-handbag icons"></i></a>
+                </li>
+              </ul>
             </div>
+          </nav>
         </div>
+      </div>
     </header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+  </div>
 </div>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
