--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
             </div>
             <div class="float-md-right">
               <ul class="account_list">
-                <li><a href="#">My Account</a></li>
+                <li><a routerLink="/auth/register">My Account</a></li>
                 <!-- <li><a href="#">Wish List (0)</a></li> -->
                 <li><a href="#">Shopping Cart</a></li>
                 <li><a href="#">Checkout</a></li>
