--- a/src/app/about/about/about.component.html
+++ b/src/app/about/about/about.component.html
@@ -72,18 +72,11 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <img src="assets/img/aboutus.png" class="img-responsive"  alt="about-us"/>
+              <img [src]="image" class="img-responsive"  alt="about-us"/>
             </div>
-            <div class="col-sm-6">
-                <h2>About Gift shop</h2>
-                <p>
-                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here,
-                    content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy
-                </p>
-                <p>
-                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here,
-                    content here'
-                </p>
+          <div class="col-sm-6">
+            <h2>{{title}}</h2>
+            <div [innerHTML]="content"> </div>
             </div>
         </div>
     </div>
