--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -48,7 +48,7 @@
             </div>
             <div class="col-lg-6 form-group">
               <input class="form-control" type="password" formControlName="password" placeholder="Password">
-              <mat-error *ngIf="registerForm.controls.password.hasError('minLength') && registerForm.controls.password.touched">
+              <mat-error *ngIf="registerForm.controls.password.hasError('minlength') && registerForm.controls.password.touched">
                 password must be at least 6 characters
               </mat-error>
               <mat-error *ngIf="registerForm.controls.password.hasError('required') && registerForm.controls.password.touched">
@@ -62,7 +62,7 @@
               <mat-error *ngIf="registerForm.hasError('notSame') && registerForm.controls.confirmPassword.touched">
                 your passwords are not match
               </mat-error>
-              <mat-error *ngIf="registerForm.controls.confirmPassword.hasError('minLength') && registerForm.controls.confirmPassword.touched">
+              <mat-error *ngIf="registerForm.controls.confirmPassword.hasError('minlength') && registerForm.controls.confirmPassword.touched">
                 password must be at least 6 characters
               </mat-error>
               <mat-error *ngIf="registerForm.controls.confirmPassword.hasError('required') && registerForm.controls.confirmPassword.touched">
