--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,2 +1,15 @@
-@import "../../assets/css/style.css";
+@import "../../assets/scss/variables";
+@import "../../assets/scss/predefin";
+@import "../../assets/vendors/bootstrap-selector/css/bootstrap-select.min.css";
 @import "../../assets/css/ltr.css";
+@import "../../assets/css/responsive.css";
+@import "../../assets/css/bootstrap.min.css";
+@import "../../assets/scss/button";
+@import "../../assets/scss/blog";
+@import "../../assets/scss/shop";
+
+
+
+
+
+
