--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
 @import "./assets/scss/style.scss";
 @import "./assets/css/responsive.css";
 @import "./assets/css/bootstrap.min.css";
+@import "./assets/css/font-awesome.min.css";
 @import "./assets/scss/variables";
 @import "./assets/scss/predefin";
 @import "./assets/scss/shop";
 @import "./assets/scss/button";
+@import "./assets/scss/feature";
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
