slider gift completed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -277,11 +277,11 @@
                     <h3>Completed gifts</h3>
                   </div>
                   <div class="float-md-right">
-                    <a href="#" class="vc_goUp"><i class="arrow_carrot-left"></i></a>
-                    <a href="#" class="vc_goDown"><i class="arrow_carrot-right"></i></a>
+                    <a  (click)="scroll('top')" class="vc_goUp"><i class="arrow_carrot-left"></i></a>
+                    <a class="vc_goDown" (click)="scroll('bottom')"><i class="arrow_carrot-right"></i></a>
                   </div>
                 </div>
-                <ul class="verticalCarouselGroup vc_list">
+                <ul id="completed" class="verticalCarouselGroup vc_list" style="height: 300px;overflow-y: hidden;">
                   <li>
                     <div class="media">
                       <div class="d-flex">
@@ -320,6 +320,79 @@
                       <div class="media-body">
                         <a href="#">
                           <h4>Casual Shoes</h4>
+                          <h5>$45.05</h5>
+                        </a>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="media">
+                      <div class="d-flex">
+                        <a href="#">
+                          <img src="./assets/img/product/featured-product/f-p-4.jpg" alt="" />
+                        </a>
+                      </div>
+                      <div class="media-body">
+                        <a href="#">
+                          <h4>Casual Shoes</h4>
+                          <h5>$45.05</h5>
+                        </a>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="media">
+                      <div class="d-flex">
+                        <a href="#">
+                          <img src="./assets/img/product/featured-product/f-p-4.jpg" alt="" />
+                        </a>
+                      </div>
+                      <div class="media-body">
+                        <a href="#">
+                          <h4>Casual Shoes</h4>
+                          <h5>$45.05</h5>
+                        </a>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="media">
+                      <div class="d-flex">
+                        <a href="#">
+                          <img src="./assets/img/product/featured-product/f-p-4.jpg" alt="" />
+                        </a>
+                      </div>
+                      <div class="media-body">
+                        <a href="#">
+                          <h4>Casual Shoes</h4>
+                          <h5>$45.05</h5>
+                        </a>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="media">
+                      <div class="d-flex">
+                        <a href="#">
+                          <img src="./assets/img/product/featured-product/f-p-4.jpg" alt="" />
+                        </a>
+                      </div>
+                      <div class="media-body">
+                        <a href="#">
+                          <h4>Casual Shoes</h4>
+                          <h5>$45.05</h5>
+                        </a>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="media">
+                      <div class="d-flex">
+                        <img src="./assets/img/product/featured-product/f-p-2.jpg" alt="" />
+                      </div>
+                      <div class="media-body">
+                        <a href="#">
+                          <h4>Puffer Jacket</h4>
                           <h5>$45.05</h5>
                         </a>
                       </div>
