--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
               </div>
             </div>
             <div class="main_slider_area" style="overflow: visible;">
-              <div id="home_box_slider" class="rev_slider revslider-initialised tp-simpleresponsive"
+              <div id="home_box_slider" (mouseenter) ="showArrows('show')" (mouseleave) ="showArrows('hide')" class="rev_slider revslider-initialised tp-simpleresponsive"
                 data-version="5.3.1.6" style="margin-top: 0px; margin-bottom: 0px; height: 450px;"
                 data-slideactive="rs-1587">
                 <ul class="tp-revslider-mainul"
@@ -130,10 +130,10 @@
                 </div>
                 <div class="tp-bannertimer"
                   style="visibility: hidden; width: 0.028778%; transform: translate3d(0px, 0px, 0px);"></div>
-                <div class="tp-leftarrow tparrows normal noSwipe"
+                <div class="tp-leftarrow tparrows normal noSwipe" [style]="arrows ? 'visibility: visible' : 'visibility: hidden'"
                   style="top: 100%; transform: matrix(1, 0, 0, 1, -100, -50); left: 100%;" (click)="slider('prev')">
                 </div>
-                <div class="tp-rightarrow tparrows normal noSwipe"
+                <div class="tp-rightarrow tparrows normal noSwipe" [style]="arrows ? 'visibility: visible' : 'visibility: hidden'"
                   style="top: 100%; transform: matrix(1, 0, 0, 1, -50, -50); left: 100%;" (click)="slider('next')">
                 </div>
               </div>
@@ -199,10 +199,10 @@
                   </ul>
                   <div class="row isotope_l_p_inner">
                     <div *ngFor="let event of viewedEvents" class="col-lg-4 col-md-4 col-sm-6 woman">
-                      <div *ngIf="event.gifts.length > 0" class="l_product_item">
-                        <div class="l_p_img">
+                      <div  class="l_product_item">
+                        <div class="l_p_img" style="height: 305px" >
                           <a href="#">
-                            <img class="img-fluid" [src]="event.gifts[0].image" alt="" />
+                            <img class="img-fluid w-100 h-100" [src]="event.image"  alt="" />
                             <h5 class="done">Done</h5>
                           </a>
                         </div>
@@ -217,8 +217,8 @@
                             </li>
                             <!-- <li class="p_icon"><a href="#"><i class="icon_heart_alt"></i></a></li> -->
                           </ul>
-                          <h4>{{event.gifts[0].name}}</h4>
-                          <h5>${{event.gifts[0].price}}</h5>
+                          <h4>{{event.name}}</h4>
+                          <h5>${{event.price}}</h5>
                         </div>
                       </div>
                     </div>
@@ -281,119 +281,16 @@
                     <a class="vc_goDown" (click)="scroll('bottom')"><i class="arrow_carrot-right"></i></a>
                   </div>
                 </div>
-                <ul id="completed" class="verticalCarouselGroup vc_list" style="height: 300px;overflow-y: hidden;">
+                <ul *ngFor="let gift of data?.completed_gifts" id="completed" class="verticalCarouselGroup vc_list" style="height: 300px;overflow-y: hidden;">
                   <li>
                     <div class="media">
                       <div class="d-flex">
-                        <img src="./assets/img/product/featured-product/f-p-2.jpg" alt="" />
+                        <img [src]="gift.image" alt="" />
                       </div>
                       <div class="media-body">
                         <a href="#">
-                          <h4>Puffer Jacket</h4>
-                          <h5>$45.05</h5>
-                        </a>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="media">
-                      <div class="d-flex">
-                        <a href="#">
-                          <img src="./assets/img/product/featured-product/f-p-3.jpg" alt="" />
-                        </a>
-                      </div>
-                      <div class="media-body">
-                        <a href="#">
-                          <h4>Leather Bag</h4>
-                          <h5>$45.05</h5>
-                        </a>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="media">
-                      <div class="d-flex">
-                        <a href="#">
-                          <img src="./assets/img/product/featured-product/f-p-4.jpg" alt="" />
-                        </a>
-                      </div>
-                      <div class="media-body">
-                        <a href="#">
-                          <h4>Casual Shoes</h4>
-                          <h5>$45.05</h5>
-                        </a>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="media">
-                      <div class="d-flex">
-                        <a href="#">
-                          <img src="./assets/img/product/featured-product/f-p-4.jpg" alt="" />
-                        </a>
-                      </div>
-                      <div class="media-body">
-                        <a href="#">
-                          <h4>Casual Shoes</h4>
-                          <h5>$45.05</h5>
-                        </a>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="media">
-                      <div class="d-flex">
-                        <a href="#">
-                          <img src="./assets/img/product/featured-product/f-p-4.jpg" alt="" />
-                        </a>
-                      </div>
-                      <div class="media-body">
-                        <a href="#">
-                          <h4>Casual Shoes</h4>
-                          <h5>$45.05</h5>
-                        </a>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="media">
-                      <div class="d-flex">
-                        <a href="#">
-                          <img src="./assets/img/product/featured-product/f-p-4.jpg" alt="" />
-                        </a>
-                      </div>
-                      <div class="media-body">
-                        <a href="#">
-                          <h4>Casual Shoes</h4>
-                          <h5>$45.05</h5>
-                        </a>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="media">
-                      <div class="d-flex">
-                        <a href="#">
-                          <img src="./assets/img/product/featured-product/f-p-4.jpg" alt="" />
-                        </a>
-                      </div>
-                      <div class="media-body">
-                        <a href="#">
-                          <h4>Casual Shoes</h4>
-                          <h5>$45.05</h5>
-                        </a>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="media">
-                      <div class="d-flex">
-                        <img src="./assets/img/product/featured-product/f-p-2.jpg" alt="" />
-                      </div>
-                      <div class="media-body">
-                        <a href="#">
-                          <h4>Puffer Jacket</h4>
-                          <h5>$45.05</h5>
+                          <h4>{{gift.name}}</h4>
+                          <h5>{{gift.price}}</h5>
                         </a>
                       </div>
                     </div>
