home page buttons

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -304,7 +304,7 @@
               <div class="input-group">
                 <input type="email" class="form-control" placeholder="yourmail@domain.com" aria-label="Search for..." />
                 <span class="input-group-btn">
-                  <button class="btn btn-secondary subs_btn" type="button">
+                  <button class="btn btn-secondary subs_btn_1" type="button">
                     Subscribe
                   </button>
                 </span>
