--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,5 +8,6 @@
 @import "./assets/scss/button";
 @import "./assets/scss/feature";
 @import "~animate.css/animate.min";
+@import '~ngx-toastr/toastr';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
