--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,13 +5,11 @@
         <div class="col-lg-9 float-md-right">
           <div class="sidebar_main_content_area">
             <div class="advanced_search_area" style="position: relative;">
-              <button (click)="dropdown = !dropdown" style="width: 25%; border: none; font-size: 21px;">{{categoryName}}</button>
-              <ul *ngIf="dropdown" style="position: absolute;top: 57px;background: white;z-index: 1111;width: 25%;" class="dropdown">
-                <li
-                  style="padding: 0px 10px;font-size: 16px;color: #666666;line-height: 35px;font-size: 18px;cursor: pointer;"
+              <button (click)="dropdown = !dropdown" class="category">{{categoryName}}</button>
+              <ul *ngIf="dropdown" class="dropdown">
+                <li class="links"
                   (click)="getCategories(0, 'All')"><a>All</a></li>
-                <li
-                  style="padding: 0px 10px;font-size: 16px;color: #666666;line-height: 35px;font-size: 18px;cursor: pointer;"
+                <li class="links"
                   *ngFor="let event of data?.categories" [value]="event.id" (click)="getCategories(event.id, event.name)">
                   <a>{{event.name}}</a></li>
               </ul>
