--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,10 +1,3 @@
-@import "../../assets/scss/variables";
-@import "../../assets/scss/predefin";
-@import "../../assets/css/ltr.css";
-@import "../../assets/css/responsive.css";
-@import "../../assets/scss/blog";
-@import "../../assets/scss/shop";
-
 .subs_btn_1 {
   background: #d91522;
   text-transform: uppercase;
@@ -44,7 +37,28 @@ button {
 }
 
 .dropdown {
+  position: absolute;
+  top: 57px;
+  background: white;
+  z-index: 1111;
+  width: 25%;
+
   @media (max-width: 767px) {
     min-width: 100% !important;
   }
+}
+
+.links {
+  padding: 0px 10px;
+  font-size: 16px;
+  color: #666666;
+  line-height: 35px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.category {
+  width: 25%;
+  border: none;
+  font-size: 21px;
 }
