--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -12,12 +12,14 @@
     transform: translateY(-50%);
     max-width: 465px;
     width: 100%;
+
     h3 {
         font-size: 60px;
         color: #000;
         font-family: $pop;
         font-weight: 600;
     }
+
     p {
         font-size: 16px;
         line-height: 24px;
@@ -26,6 +28,7 @@
         font-weight: normal;
         padding: 45px 0px 60px 0px;
     }
+
     .add_cart_btn {
         padding: 0px 38px;
     }
@@ -43,6 +46,7 @@
     background-size: cover;
     position: relative;
     z-index: 3;
+
     &:before {
         content: "";
         background: rgba(0, 0, 0, .5);
@@ -58,6 +62,7 @@
 .c_banner_inner {
     text-align: center;
     padding: 170px 0px;
+
     h3 {
         color: #fff;
         font-size: 24px;
@@ -67,10 +72,12 @@
         letter-spacing: .6px;
         padding-bottom: 5px;
     }
+
     ul {
         li {
             display: inline-block;
             margin-right: 10px;
+
             a {
                 font-size: 14px;
                 color: #cccccc;
@@ -78,6 +85,7 @@
                 font-weight: normal;
                 position: relative;
                 letter-spacing: .35px;
+
                 &:before {
                     content: ">";
                     position: absolute;
@@ -86,14 +94,17 @@
                     transform: translateY(-50%);
                 }
             }
+
             &:last-child {
                 margin-right: 0px;
+
                 a {
                     &:before {
                         display: none;
                     }
                 }
             }
+
             &.current {
                 a {
                     color: #fff;
@@ -112,25 +123,27 @@
 ============================================================================================ */
 
 .solid_banner_area {
-    background: #f3f3f3;
     text-align: center;
 }
 
 .solid_banner_inner {
     padding: 68px 0px;
+
     h3 {
         font-size: 24px;
         text-transform: uppercase;
-        color: #000;
+        color: white;
         font-family: $pop;
         font-weight: 600;
         letter-spacing: .60px;
         padding-bottom: 10px;
     }
+
     ul {
         li {
             display: inline-block;
             margin-right: 12px;
+
             a {
                 font-size: 14px;
                 font-family: $pop;
@@ -139,6 +152,7 @@
                 color: #000;
                 position: relative;
                 display: inline-block;
+
                 &:before {
                     content: ">";
                     position: absolute;
@@ -147,8 +161,10 @@
                     transform: translateY(-50%);
                 }
             }
+
             &:last-child {
                 margin-right: 0px;
+
                 a {
                     &:before {
                         display: none;
